--- a/src/MLS.WebUI/src/index.html
+++ b/src/MLS.WebUI/src/index.html
@@ -5,7 +5,7 @@
     <title>MatLid Store</title>
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="assets/Images/Logo_MatLidStore.jpg" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <app-main></app-main>
