--- a/src/MLS.MatLidStoreUI/src/index.html
+++ b/src/MLS.MatLidStoreUI/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MatLidStore</title>
+    <title>MatLidStore - Modern Artistic Trends in Lifestyle & Design</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="matlidstore.ico" />
   </head>
 
   <body>
