--- a/src/MLS.MatLidStoreUI/src/index.html
+++ b/src/MLS.MatLidStoreUI/src/index.html
@@ -5,7 +5,7 @@
     <title>MatLidStore - Modern Artistic Trends in Lifestyle & Design</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="matlidstore.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
   <body>
