Add metadata comments and reformat various files
- Added project metadata comments to multiple files for better documentation.
- Updated `.eslintrc.json` and `angular.json` to format arrays and objects with multi-line syntax for improved readability.
- Changed `request` type in `launch.json` from `launch` to `attach`.
- Incremented version in `package-lock.json` and `package.json` from `0.0.0` to `0.0.1`.
- Made `http` property readonly in `mls-data.service.ts`.
- Replaced `accountService.isLoggedIn()` with `accountService.getCurrentUser()` in `auth.guard.ts`.
- Adjusted margin in `admin-home.component.html` by removing `-m-24` class.
- Added CSS classes for better styling in `footer.component.scss` and `header.component.scss`.
- Added `Logout` button and additional styling to `admin-navbar.component.html`.
- Reformatted `motion-tailwind.css` for consistent indentation and line breaks.
- Improved formatting in `index.html`, `tsconfig.app.json`, `tsconfig.json`, and `tsconfig.spec.json`.
- Modified SVG content in `github-mark-white.svg` and `github-mark.svg` for better readability.

--- a/src/MLS.MatLidStoreUI/src/index.html
+++ b/src/MLS.MatLidStoreUI/src/index.html
@@ -1,14 +1,29 @@
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: index.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:30, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>MatLidStore | Modern Artistic Trends in Lifestyle & Design</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/MatLidStore_Logo.png" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>MatLidStore | Modern Artistic Trends in Lifestyle & Design</title>
+  <base href="/" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <link href="./assets/images/MatLidStore_Logo.png" rel="apple-touch-icon" sizes="76x76" />
+</head>
+<body>
+<app-root></app-root>
+</body>
 </html>
